--- a/address_book/templates/add_address.html
+++ b/address_book/templates/add_address.html
@@ -1,4 +1,31 @@
 {% extends 'base.html' %}
 {% block content %}
   <h1>Add Address</h1>
+  <br>
+  <form method="post">
+    {% csrf_token %}
+    <div class="form-group">
+      <input type="text" class="form-control" aria-describedby="emailHelp" placeholder="Full Name" name="name">
+    </div>
+    <div class="form-group">
+      <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Email Address" name="email">
+    </div>
+    <div class="form-group">
+      <input type="text" class="form-control" aria-describedby="emailHelp" placeholder="Phone Number" name="phone">
+    </div>
+    <div class="form-group">
+      <input type="text" class="form-control" aria-describedby="emailHelp" placeholder="Address" name="address">
+    </div>
+        <div class="form-group">
+      <input type="text" class="form-control" aria-describedby="emailHelp" placeholder="City" name="city">
+    </div>
+        <div class="form-group">
+      <input type="text" class="form-control" aria-describedby="emailHelp" placeholder="State" name="state">
+    </div>
+        <div class="form-group">
+      <input type="text" class="form-control" aria-describedby="emailHelp" placeholder="Zip Code" name="zipcode">
+    </div>
+    <br>
+    <button type="submit" class="btn btn-primary">Add Address</button>
+  </form>
 {% endblock %}
