--- a/address_book/templates/base.html
+++ b/address_book/templates/base.html
@@ -27,9 +27,23 @@
 
       </div>
     </nav>
+  <br>
 
 <!--  Body  -->
       <div class="container">
+ <!--  Messages -->
+          {% if messages %}
+          {% for message in messages %}
+            <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+              <strong>{{ message }}</strong>
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+          {% endfor %}
+        {% endif %}
+        <br>
+<!--  Content block  -->
         {% block content %}
         {% endblock %}
       </div>
